Online Games section finished

--- a/index.html
+++ b/index.html
@@ -21,28 +21,55 @@
         </div>
     </header>
 
-    <!-- Banner Section -->
-    <div class="banner">
-        <div class="banner_content section_title">
-            <h3 class="banner_title">PLAY LIKE THE <span class="special">G.O.A.T.</span></h3>
-            <div class="banner_text">
-                <p class="text"><i class="fa-solid fa-circle-play"></i> 1-Click instant play</p> 
-                <p class="text"><i class="fa-solid fa-download"></i> No Download</p> 
-                <p class="text"><i class="fa-solid fa-people-group"></i> 1000s of supported online games</p> 
-            </div>
-            <div class="btn_container">
-                <button class="primary_btn">SIGN IN</button>
-                <button class="primary_btn">GO ROGUE</button>
-            </div>
-        </div>
-        <div class="banner_image">
-            <img src="./images/Group 18.png" alt="">
-        </div>
-    </div>
+
 
     <main>
 
-    </main>
+        <!-- Banner Section -->
+        <section class="banner">
+            <div class="banner_content">
+                <h3 class="banner_title">PLAY LIKE THE <span>G.O.A.T.</span></h3>
+                <div class="banner_text">
+                    <p class="text"><i class="fa-solid fa-circle-play"></i> 1-Click instant play</p> 
+                    <p class="text"><i class="fa-solid fa-circle-play"></i> No Download</p> 
+                    <p class="text"><i class="fa-solid fa-people-group"></i> 1000s of supported online games</p> 
+                </div>
+                <div class="btn_container">
+                    <button class="primary_btn">SIGN IN</button>
+                    <button class="primary_btn">GO ROGUE</button>
+                </div>
+            </div>
+            <div class="banner_image">
+                <img src="./images/Group 18.png" alt="">
+            </div>
+        </section>
+
+
+        <!-- Online Games Section -->
+        <section class="online_games">
+            <h3 class="section_title">Online Games Funny Videos</h3>
+            <p class="description">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="games_container">
+                <div class="game">
+                    <div class="game_image_">
+                        <img src="./images/Rectangle 4.png" alt="">
+                    </div>
+                    <div class="game_details">No Download. No Installs. Play games Instantly on Gamer.</div>
+                </div>
+                <div class="game">
+                    <div class="game_image_"><img src="./images/Rectangle 5.png" alt=""></div>
+                    <div class="game_details">Did you score? #unblockedgames #school</div>
+                </div>
+                <div class="game">
+                    <div class="game_image_"><img src="./images/Rectangle 7.png" alt=""></div>
+                    <div class="game_details">Breaking game records like OG</div>
+                </div>
+                <div class="game">
+                    <div class="game_image_"><img src="./images/Rectangle 6.png" alt=""></div>
+                    <div class="game_details">Busted gaming on school laptop, but you are still lit.</div>
+                </div>
+            </div>
+        </section>
     <footer>
 
     </footer>
