Online games section finished

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="btn_container">
                     <button class="primary_btn">SIGN IN</button>
-                    <button class="primary_btn">GO ROGUE</button>
+                    <button class="primary_btn" id="btn_2">GO ROGUE</button>
                 </div>
             </div>
             <div class="banner_image">
