--- a/index.html
+++ b/index.html
@@ -70,8 +70,109 @@
                 </div>
             </div>
         </section>
-    <footer>
 
+
+        <!-- Play Intantly Section -->
+        <section class="play_instant">
+            <div class="play_instant_content">
+                <h3 class="section_title"><span class="special_text">Play Instantly</span>,
+                    <br>No Downloads
+                    <br>No Installs.</h3>
+                <p class="description">Play games online for free without <br>downloading. Just click the Play button <br>and play instantly in your browser.</p>
+            </div>
+            <div class="play_instant_image">
+                <img src="./images/Rectangle 55.png" alt="">
+                <img src="./images/Rectangle 6.png" alt="">
+            </div>
+        </section>
+
+
+        <!-- Career Section -->
+
+
+        <!-- Games Catergory SEction -->
+        <section class="games_category">
+            <div class="games_category_container">
+                <div class="game_type">
+                    <div class="game_profile_pic">
+                        <img src="./images/Rectangle 11.png" alt="">
+                    </div>
+                    <div class="game_type_name">
+                        <h4>Action Games</h4>
+                    </div>
+                </div>
+                <div class="game_type">
+                    <div class="game_profile_pic">
+                        <img src="./images/Rectangle 12.png" alt="">
+                    </div>
+                    <div class="game_type_name">
+                        <h4>Adventure Games</h4>
+                    </div>
+                </div>
+                <div class="game_type">
+                    <div class="game_profile_pic">
+                        <img src="./images/Rectangle 13.png" alt="">
+                    </div>
+                    <div class="game_type_name">
+                        <h4>Arcade Games</h4>
+                    </div>
+                </div>
+                <div class="game_type">
+                    <div class="game_profile_pic">
+                        <img src="./images/Rectangle 14.png" alt="">
+                    </div>
+                    <div class="game_type_name">
+                        <h4>Educational Games</h4>
+                    </div>
+                </div>
+                <div class="game_type">
+                    <div class="game_profile_pic">
+                        <img src="./images/Rectangle 15.png" alt="">
+                    </div>
+                    <div class="game_type_name">
+                        <h4>Word Games</h4>
+                    </div>
+                </div>
+                <div class="game_type">
+                    <div class="game_profile_pic">
+                        <img src="./images/Rectangle 16.png" alt="">
+                    </div>
+                    <div class="game_type_name">
+                        <h4>Role Playing Games</h4>
+                    </div>
+                </div>
+                <div class="game_type">
+                    <div class="game_profile_pic">
+                        <img src="./images/Rectangle 17.png" alt="">
+                    </div>
+                    <div class="game_type_name">
+                        <h4>Music & Audio Games</h4>
+                    </div>
+                </div>
+                <div class="game_type">
+                    <div class="game_profile_pic">
+                        <img src="./images/Rectangle 18.png" alt="">
+                    </div>
+                    <div class="game_type_name">
+                        <h4>Puzzle Games</h4>
+                    </div>
+                </div>
+                <div class="game_type">
+                    <div class="game_profile_pic">
+                        <img src="./images/Rectangle 19.png" alt="">
+                    </div>
+                    <div class="game_type_name">
+                        <h4>Strategy Games</h4>
+                    </div>
+                </div>
+        </section>
+
+
+
+
+    <!-- Footer Section -->
+    <footer>
+        
     </footer>
 </body>
 </html>
