footer section finished

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/9adb677e11.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="./Style/styles.css">
     <title>Gamerz Zone By Parvez</title>
 </head>
@@ -11,12 +12,20 @@
     <!-- Header Section  -->
     <header>
         <div class="header_container">
-            <div class="logo">
-                <img src="./images/Frame.png" alt="">
-            </div>
+        <div class="logo_section">
+            <img src="./images/Frame.png" alt="">
+            <h3 class="section_title"><span class="pink">G</span>amer</h3>
+        </div>
             <ul>
                 <li>About Us</li>
                 <li>Developer</li>
+                <li>
+                    <ul class="follow_us">
+                        <li>Follow Us</li>
+                        <li><i class="fa-brands fa-youtube"></i></li>
+                        <li><i class="fa-brands fa-tiktok"></i></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </header>
@@ -47,7 +56,7 @@
 
         <!-- Online Games Section -->
         <section class="online_games">
-            <h3 class="section_title">Online Games Funny Videos</h3>
+            <h3 class="section_title">Online Games <span class="gradient">Funny Videos</span></h3>
             <p class="description">A Collection of Hilarious Videos to Brighten Your Day</p>
             <div class="games_container">
                 <div class="game">
@@ -75,7 +84,7 @@
         <!-- Play Intantly Section -->
         <section class="play_instant">
             <div class="play_instant_content">
-                <h3 class="section_title"><span class="special_text">Play Instantly</span>,
+                <h3 class="section_title"><span class="pink">Play Instantly</span>,
                     <br>No Downloads
                     <br>No Installs.</h3>
                 <p class="description">Play games online for free without <br>downloading. Just click the Play button <br>and play instantly in your browser.</p>
@@ -172,7 +181,37 @@
 
     <!-- Footer Section -->
     <footer>
-        
+        <div class="logo_section">
+            <img src="./images/Frame.png" alt="">
+            <h3 class="section_title"><span class="pink">G</span>amer</h3>
+        </div>
+        <ul class="footer_list">
+            <li>Our Story</li>
+            <li>Games</li>
+            <li>Web Games</li>
+            <li>Careers</li>
+            <li>Support</li>
+            <li>My Account</li>
+        </ul>
+        <div class="social_links">
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <!-- <i class="fa-brands fa-apple"></i> -->
+        </div>
+        <div class="terms_and_conditions">
+            <ul>
+                <li>Terms and conditions</li>
+                <li>Privacy Policy</li>
+                <li>Cookie Policy</li>
+                <li>Privacy Settings</li>
+            </ul>
+            <p>
+                Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+            </p>
+        </div>
     </footer>
 </body>
 </html>
