finished mobile responsive

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://kit.fontawesome.com/9adb677e11.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="./Style/styles.css">
-    <title>Gamerz Zone By Parvez</title>
+    <title>Parvez</title>
 </head>
 <body>
     <!-- Header Section  -->
@@ -16,17 +16,19 @@
             <img src="./images/Frame.png" alt="">
             <h3 class="section_title"><span class="pink">G</span>amer</h3>
         </div>
+        <div class="nav_list">
             <ul>
                 <li>About Us</li>
                 <li>Developer</li>
                 <li>
-                    <ul class="follow_us">
-                        <li>Follow Us</li>
-                        <li><i class="fa-brands fa-youtube"></i></li>
-                        <li><i class="fa-brands fa-tiktok"></i></li>
-                    </ul>
+                    <div class="follow_us">
+                        <p>Follow Us</p>
+                        <p><i class="fa-brands fa-youtube"></i></p>
+                        <p><i class="fa-brands fa-tiktok"></i></p>
+                    </div>
                 </li>
             </ul>
+        </div>
         </div>
     </header>
 
@@ -56,44 +58,48 @@
 
         <!-- Online Games Section -->
         <section class="online_games">
-            <h3 class="section_title">Online Games <span class="gradient">Funny Videos</span></h3>
-            <p class="description">A Collection of Hilarious Videos to Brighten Your Day</p>
-            <div class="games_container">
+            <div class="online_games_heading">
+                <h3 class="section_title">Online Games <span class="gradient">Funny Videos</span></h3>
+                <p class="description">A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="online_games_container">
                 <div class="game">
-                    <div class="game_image_">
-                        <img src="./images/Rectangle 4.png" alt="">
-                    </div>
-                    <div class="game_details">No Download. No Installs. Play games Instantly on Gamer.</div>
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <p class="game_description">No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
                 <div class="game">
-                    <div class="game_image_"><img src="./images/Rectangle 5.png" alt=""></div>
-                    <div class="game_details">Did you score? #unblockedgames #school</div>
+                    <img src="./images/Rectangle 5.png" alt="">
+                    <p class="game_description">Did you score? #unblockedgames #school</p>
                 </div>
                 <div class="game">
-                    <div class="game_image_"><img src="./images/Rectangle 7.png" alt=""></div>
-                    <div class="game_details">Breaking game records like OG</div>
+                    <img src="./images/Rectangle 7.png" alt="">
+                    <p class="game_description">Breaking game records like OG</p>
                 </div>
                 <div class="game">
-                    <div class="game_image_"><img src="./images/Rectangle 6.png" alt=""></div>
-                    <div class="game_details">Busted gaming on school laptop, but you are still lit.</div>
+                    <img src="./images/Rectangle 6.png" alt="">
+                    <p class="game_description">Busted gaming on school laptop, but you are still lit.</p>
                 </div>
             </div>
         </section>
+
 
 
         <!-- Play Intantly Section -->
         <section class="play_instant">
             <div class="play_instant_content">
-                <h3 class="section_title"><span class="pink">Play Instantly</span>,
-                    <br>No Downloads
-                    <br>No Installs.</h3>
+                <h3 class="section_title"><span class="pink">Play Games</span><br><span class="gradient">Online</span>,
+                    Anywhere
+                    <br>Anytime.</h3>
                 <p class="description">Play games online for free without <br>downloading. Just click the Play button <br>and play instantly in your browser.</p>
             </div>
             <div class="play_instant_image">
-                <img src="./images/Rectangle 55.png" alt="">
-                <img src="./images/Rectangle 6.png" alt="">
+                <img class="big_image" src="./images/Rectangle 67.png" alt="">
+                <img class="small_image" src="./images/Rectangle 78.png" alt="">
             </div>
         </section>
+
+
+
 
 
         <!-- Career Section -->
@@ -166,7 +172,7 @@
                         <h4>Puzzle Games</h4>
                     </div>
                 </div>
-                <div class="game_type">
+                <div class="game_type last">
                     <div class="game_profile_pic">
                         <img src="./images/Rectangle 19.png" alt="">
                     </div>
@@ -199,6 +205,7 @@
             <a href=""><i class="fa-brands fa-youtube"></i></a>
             <a href=""><i class="fa-brands fa-linkedin"></i></a>
             <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-tiktok"></i></a>
             <!-- <i class="fa-brands fa-apple"></i> -->
         </div>
         <div class="terms_and_conditions">
